[gd_scene load_steps=16 format=2]

[ext_resource path="res://planet_maps/HeightMap.gd" type="Script" id=1]
[ext_resource path="res://sprites/hex_grid.png" type="Texture" id=2]
[ext_resource path="res://planet_maps/gas_planet_surface_gradient.tres" type="Gradient" id=4]
[ext_resource path="res://planet_maps/PlanetMapController.gd" type="Script" id=5]
[ext_resource path="res://sprites/grid_square.png" type="Texture" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

// Our gradient texture.
uniform sampler2D colormap : hint_black;

uniform vec2 noise_minmax = vec2(0.0, 1.0);

void fragment() {
	// Using `noise_minmax`, we normalize our `noise` variable's range.
	float noise = (texture(TEXTURE, UV).r - noise_minmax.x) / (noise_minmax.y - noise_minmax.x);
	vec2 uv_noise = vec2(noise, 0);
	COLOR = texture(colormap, uv_noise);
}"

[sub_resource type="GradientTexture" id=2]
gradient = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 1 )
shader_param/noise_minmax = Vector2( 0, 1 )
shader_param/colormap = SubResource( 2 )

[sub_resource type="OpenSimplexNoise" id=4]
octaves = 9
period = 128.0

[sub_resource type="NoiseTexture" id=5]
width = 1024
height = 600
noise = SubResource( 4 )

[sub_resource type="GradientTexture" id=6]
gradient = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 0.403922 )
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=11]
outline_size = 1
outline_color = Color( 0, 0, 0, 0.423529 )
font_data = SubResource( 10 )

[node name="PlanetSurfaceMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetMap" type="TextureRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 5 )
stretch_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
colormap = SubResource( 6 )

[node name="Grid" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.207843 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid2" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.207843 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetName" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 32.0
margin_right = -40.0
margin_bottom = 69.0
grow_horizontal = 0
custom_fonts/font = SubResource( 9 )
text = "PLANET"
align = 2
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetInformation" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 72.0
margin_right = -40.0
margin_bottom = 200.0
grow_horizontal = 0
custom_fonts/font = SubResource( 11 )
text = "Type: Gas
Size: Huge
Orbital Debris: Yes"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
